Update: Index.html "start contact form"

--- a/Index.html
+++ b/Index.html
@@ -214,9 +214,17 @@
           </div>
 
       </article>
+      <section class="cc-sect cc-top">
+            <p class="contact mble">CONTACT US</p>
+            <p class="text-invite">
+                If you have an application you are interested in developing,
+                a feature that you need built or a project that needs coding.
+                I’d love to help with it
+            </p>
+        </section>
+
       </main>
       <footer>
-
 
       </footer>
       
