Update: Index.html "Add more modification contact form"

--- a/Index.html
+++ b/Index.html
@@ -232,7 +232,7 @@
               <textarea cols="30" rows="10" placeholder="Your message goes here" maxlength="500" required class="form_input" name="message"></textarea>
             </div>
 
-            <button class="form_button" type="Submit">Get in Touch</button>
+            <button class="form_button" type="Submit">Get in touch</button>
 
           </form>
         </section>
