--- a/Index.html
+++ b/Index.html
@@ -223,6 +223,20 @@
             </p>
       </section>
 
+      <section class="contact_form">
+          <form action="https://formspree.io/f/xyyvbwzw" method="post">
+
+            <div class="form_inputs">
+              <input type="text" placeholder="Jhon Smith" class="form_input" maxlength="30" required name="name">
+              <input type="email" placeholder="jhonedao@gmail.com" class="form_input" required name="email">
+              <textarea cols="30" rows="10" placeholder="Your message goes here" maxlength="500" required class="form_input" name="message"></textarea>
+            </div>
+
+            <button class="form_button" type="Submit">Get in touch</button>
+
+          </form>
+      </section>
+
 
       </main>
       <footer>
