Add article container and move form section into it

--- a/Index.html
+++ b/Index.html
@@ -214,29 +214,26 @@
           </div>
 
       </article>
-      <section class="cc-sect cc-top">
+      <article class="contact-section" id="contact-section">
+        <section class="cc-sect cc-top">
             <p class="contact mble">CONTACT US</p>
             <p class="text-invite">
-                If you have an application you are interested in developing,
-                a feature that you need built or a project that needs coding.
-                I’d love to help with it
+                If you have an application you are interested in developing, 
+                a feature that you need built or a project that needs coding. 
+                I’d love to help with it 
             </p>
-      </section>
+        </section>
 
-      <section class="contact_form">
-          <form action="https://formspree.io/f/xyyvbwzw" method="post">
-
-            <div class="form_inputs">
-              <input type="text" placeholder="Jhon Smith" class="form_input" maxlength="30" required name="name">
-              <input type="email" placeholder="jhonedao@gmail.com" class="form_input" required name="email">
-              <textarea cols="30" rows="10" placeholder="Your message goes here" maxlength="500" required class="form_input" name="message"></textarea>
-            </div>
-
-            <button class="form_button" type="Submit">Get in touch</button>
-
-          </form>
-      </section>
-
+        <section class="cc-sect">
+            <form action="https://formspree.io/f/mgeqvqbb" method="post" class="myform" id="someform">
+                <input type="text" maxlength="30" name="Name" required placeholder="Full Name">
+                <input type="email" name="Email" required placeholder="Email" id="email">
+                <textarea maxlength="500" name="message" required placeholder="Enter You Message Here"></textarea>
+                <button type="submit" class="mmb">See Project</button>
+            </form>
+            <img src="image/contact-bar.png" alt="horizontal bar" class="contact-image">
+        </section>
+      </article>
 
       </main>
       <footer>
