Add class foota to the footer container

--- a/Index.html
+++ b/Index.html
@@ -236,7 +236,7 @@
       </article>
 
       </main>
-      <footer>
+      <footer class="foota">
         <nav class="social">
             <ul>
                 <li><a href="#"><img src="image/github.png" alt="github"></a></li>
